k8s/color-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: color-service
    app.kubernetes.io/component: color-service
    app.kubernetes.io/instance: color-service
    app.kubernetes.io/name: color-service
    app.kubernetes.io/part-of: color-service
  name: color-service
  namespace: juergritter1-dev
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: color-service
    deployment: color-service
