k8s/color-service-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: color-service
    app.kubernetes.io/component: color-service
    app.kubernetes.io/instance: color-service
    app.kubernetes.io/name: color-service
    app.kubernetes.io/part-of: color-service
  name: color-service
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: color-service
    weight: 100
  wildcardPolicy: None
